<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroundimg"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        >

        <!-- Circular ProgressBar -->

        <LinearLayout
            android:id="@+id/waterLevelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water_level"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_title"/>

            <cjh.WaveProgressBarlibrary.WaveProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="28dp"
                android:indeterminate="false"
                app:behind_wave_color="#01A1D6"
                app:front_wave_color="#9DD8ED"
                app:arc_color="#fff"
                app:cavans_bg="#000"
                app:text_follow_progress="true"
                app:progress="70"
                app:shape="circle"
                app:text_size="20sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/water_ph_and_Nutrient_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false"
            app:layout_constraintTop_toBottomOf="@id/waterLevelLayout"
            app:layout_constraintStart_toStartOf="@id/waterLevelLayout"
            app:layout_constraintEnd_toEndOf="@id/waterLevelLayout"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/water_PH"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border_title"/>

                <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="28dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="80"
                    android:progressDrawable="@drawable/custom_circular_progress"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/water_Nutrient"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/border_title"/>

                <ProgressBar
                    android:id="@+id/progressBar3"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="28dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="80"
                    android:progressDrawable="@drawable/custom_circular_progress"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/watertempLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/water_ph_and_Nutrient_Layout"
            app:layout_constraintStart_toStartOf="@id/water_ph_and_Nutrient_Layout"
            app:layout_constraintEnd_toEndOf="@id/water_ph_and_Nutrient_Layout"
            >

            <TextView
                android:id="@+id/title_water_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/water_temp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_title"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_water_temp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/water_level"
                    />

                <TextView
                    android:id="@+id/wTemp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text ="25 C"
                    android:textAlignment="center"
                    android:textSize="45sp"
                    android:layout_marginTop="12sp"
                    android:layout_marginBottom="12sp"
                    android:layout_weight="1"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/AirtempLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/watertempLayout"
            app:layout_constraintStart_toStartOf="@id/watertempLayout"
            app:layout_constraintEnd_toEndOf="@id/watertempLayout"

            >

            <TextView
                android:id="@+id/title_air_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Air_temp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_air_temp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/tt"
                    />

                <TextView
                    android:id="@+id/aTemp"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text ="23 C"
                    android:textAlignment="center"
                    android:textSize="45sp"
                    android:layout_marginTop="12sp"
                    android:layout_marginBottom="12sp"
                    android:layout_weight="1"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/AirhumdLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/AirtempLayout"
            app:layout_constraintStart_toStartOf="@id/AirtempLayout"
            app:layout_constraintEnd_toEndOf="@id/AirtempLayout"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/title_air_Humd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Air_Humd"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="4dp"
                android:background="@drawable/border_title"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/title_air_temp"
                android:orientation="horizontal"
                android:weightSum="2"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/tt"
                    />

                <TextView
                    android:id="@+id/aHum"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text ="64 %"
                    android:textAlignment="center"
                    android:textSize="45sp"
                    android:layout_marginTop="12sp"
                    android:layout_marginBottom="12sp"
                    android:layout_weight="1"
                    />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>